# MotorVis

./: BatteryEnclosure_Ver7.stl  CMakeLists.txt  Capstone_SensorMonitor.ino  ElectronicsEnclosure_Ver7.stl  ElectronicsLid_Ver8.stl  README.md  WristEnclosure_Ver8.stl  WristLid_Ver8.stl  sdkconfig.defaults
04.23.26/: sdkconfig  sdkconfig.defaults
04.23.26/components/gnss_manager/: gnss_manager.cpp
04.23.26/components/heart_sensor_manager/: heart_sensor_manager.cpp
04.23.26/components/heart_sensor_manager/include/: heart_sensor_manager.h
04.23.26/components/jacket_controls/: CMakeLists.txt  jacket_controls.c
04.23.26/main/: CMakeLists.txt  Motor_Vis.c  idf_component.yml  motor_vis_ble_uuids.c  motor_vis_ble_uuids.h
04.25.26/: .gitignore  CMakeLists.txt
04.25.26/components/TinyGPSPlus-ESPIDF/TinyGPSPlus/src/: TinyGPS++.cpp
04.25.26/components/accelerometer_manager/: CMakeLists.txt  accelerometer_manager.cpp
04.25.26/components/accelerometer_manager/include/: accelerometer_manager.h
04.25.26/components/battery_manager/: CMakeLists.txt  battery_manager.cpp
04.25.26/components/battery_manager/include/: battery_manager.h
04.25.26/components/gnss_manager/: CMakeLists.txt  gnss_manager.cpp
04.25.26/components/gnss_manager/include/: gnss_manager.h
04.25.26/components/heart_sensor_manager/: CMakeLists.txt
04.25.26/components/jacket_controls/include/: jacket_controls.h
04.25.26/main/: CMakeLists.txt  Motor_Vis.c
GPS/: .gitignore
GPS/components/TinyGPSPlus-ESPIDF/: CMakeLists.txt
GPS/main/: main.cpp
Sensor Demo Files/Accel_Demo/: CMakeLists.txt
Sensor Demo Files/Accel_Demo/components/accelerometer_manager/: CMakeLists.txt  accelerometer_manager.cpp
Sensor Demo Files/Accel_Demo/components/accelerometer_manager/include/: accelerometer_manager.h
Sensor Demo Files/Accel_Demo/main/: CMakeLists.txt  accel_calibration_data.cpp  accel_calibration_data.h  accel_demo_main.cpp
Sensor Demo Files/GNSS_Demo/: CMakeLists.txt  sdkconfig
Sensor Demo Files/GNSS_Demo/build_direct/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  GNSS_Demo.elf  GNSS_Demo.map  cmake_install.cmake  config.env  flash_project_args  kconfigs.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
Sensor Demo Files/GNSS_Demo/build_direct/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  project_description.json
Sensor Demo Files/GNSS_Demo/build_direct/bootloader-prefix/tmp/: bootloader-mkdirs.cmake
Sensor Demo Files/GNSS_Demo/build_direct/bootloader/config/: sdkconfig.cmake  sdkconfig.json
Sensor Demo Files/GNSS_Demo/build_direct/bootloader/esp-idf/: cmake_install.cmake
Sensor Demo Files/GNSS_Demo/build_direct/config/: sdkconfig.cmake  sdkconfig.json
Sensor Demo Files/GNSS_Demo/build_direct/esp-idf/: cmake_install.cmake
Sensor Demo Files/GNSS_Demo/build_direct/gdbinit/: gdbinit  symbols
Sensor Demo Files/GNSS_Demo/components/gnss_manager/: gnss_manager.cpp
Sensor Demo Files/GNSS_Demo/main/: CMakeLists.txt  gnss_demo_main.cpp
main/: CMakeLists.txt  Motor_Vis.c
(+127 files in other folders)
